--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=Deneyap Hareket Isik Renk Algilayici Mesafe Olcer
-version=1.0.1
-author=Turkish Technnology Team Foundation (T3)
-maintainer=Turkish Technnology Team Foundation (T3)
+version=1.0.2
+author=Turkish Technnology Team Foundation (T3) <destek@deneyapkart.org>
+maintainer=Turkish Technnology Team Foundation (T3) <destek@deneyapkart.org>
 sentence=Arduino library for Deneyap Gesture, Color, Proximity Sensor APDS9960
 paragraph=A simple and efficient library to use Deneyap Gesture, Color, Proximity Sensor APDS9960 via I2C peripheral.
 category=Sensors
